--- a/package.json
+++ b/package.json
@@ -2,13 +2,24 @@
   "name": "proshop",
   "version": "1.0.0",
   "description": "practice ecommerce site with react redux express mongo",
-  "main": "index.js",
+  "main": "server.js",
+  "type":"module",
   "scripts": {
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "don spire",
   "license": "ISC",
   "devDependencies": {
+    "concurrently": "^6.3.0",
+    "nodemon": "^2.0.13",
     "prettier": "^2.4.1"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1"
   }
 }
