--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.5",
     "react-router-bootstrap": "^0.25.0",
