--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "node backend/server",
     "server": "nodemon backend/server",
     "client": "npm start --prefix client",
+    "clientinstall": "npm install --prefix client",
+    "build": "cd client && npm run build",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "data:import": "node backend/seeder",
