--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
     "multer": "^1.4.3"
+  },
+  "engines": {
+    "node": "^14.7.0"
   }
+
 }
